GroupList both Show Done

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
-    "uploader": "^3.48.3"
+    "uploader": "^3.48.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
