--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "firebase": "^10.13.1",
+    "flowbite": "^2.5.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-cropper": "^2.3.3",
