--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^10.13.1",
     "flowbite": "^2.5.1",
     "moment": "^2.30.1",
